--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <img src="./assets/images/cost-management.png" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
+            </p>fasdf
         </article>
         </section>
     <footer class="footer">
@@ -78,5 +78,5 @@
         </p>
     </footer>
 </body>
-<p>mary is trouble shooting </p>
+<p>mary is trouble shooting </p> jfodsjfoiwaejf
 </html>
